k8s/namespaces/overlays/production-gke/patch.virtualservices.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: observability
  annotations:
    external-dns.alpha.kubernetes.io/target: gke.raspbernetes.com
    external-dns.alpha.kubernetes.io/external: 'true'
spec:
  hosts:
    - 'grafana.gke.raspbernetes.com'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/target: gke.raspbernetes.com
    external-dns.alpha.kubernetes.io/external: 'true'
spec:
  hosts:
    - 'auth.gke.raspbernetes.com'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dex
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/target: gke.raspbernetes.com
    external-dns.alpha.kubernetes.io/external: 'true'
spec:
  hosts:
    - 'dex.gke.raspbernetes.com'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sealed-secrets
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/target: gke.raspbernetes.com
    external-dns.alpha.kubernetes.io/external: 'true'
spec:
  hosts:
    - 'sealed-secrets.gke.raspbernetes.com'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: thanos
  namespace: observability
spec:
  hosts:
    - 'thanos.gke.raspbernetes.com'
# TODO: Disabled currently
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: kiali
#   namespace: observability
# spec:
#   hosts:
#     - 'kiali.gke.raspbernetes.com'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: receiver
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/target: gke.raspbernetes.com
    external-dns.alpha.kubernetes.io/external: 'true'
spec:
  hosts:
    - 'receiver.gke.raspbernetes.com'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
  namespace: istio-system
spec:
  hosts:
    - 'jaeger.gke.raspbernetes.com'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/target: gke.raspbernetes.com
    external-dns.alpha.kubernetes.io/external: 'true'
spec:
  hosts:
    - 'hubble.gke.raspbernetes.com'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: observability
spec:
  hosts:
    - 'prometheus.gke.raspbernetes.com'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alert-manager
  namespace: observability
spec:
  hosts:
    - 'alert-manager.gke.raspbernetes.com'
